Shop page: stop product from being cropped by top edge on full-screen window on external monitor

--- a/less/preorder.less
+++ b/less/preorder.less
@@ -1830,7 +1830,7 @@ body {
 				.imageFrame {
 					background-image: url("/img/grays_q9.jpg");
 					background-position-x: center;
-					background-position-y: 70%;
+					background-position-y: 49%;
 					background-size: cover;
 					&.tallAspect {
 						background-size: cover;
